--- a/static/index.html
+++ b/static/index.html
@@ -21,7 +21,7 @@
 		<!-- p means paragraph -->
 		<div>
 			<h1>Sarah Yao</h1>
-			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
+			<p>technical sales &middot; software engineering &middot; swimming </p>
 		</div>
 
 
